syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.wz";
option java_outer_classname = "HelloProto";

/**
  IDL文件目的：发布RPC服务
 */
message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns(HelloResponse){}
  rpc c2ss(HelloRequest) returns(stream HelloResponse){}
  rpc cs2s(stream HelloRequest) returns(HelloResponse){}
  rpc cs2ss(stream HelloRequest) returns(stream HelloResponse){}
}

